--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,15 @@ build
 .yarn/install-state.gz
 .yarn/build-state.yml
 .eslintcache
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # testing
 coverage
 
