--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.18.9",
     "@vitejs/plugin-react": "^2.0.1",
+    "daisyui": "^2.24.0",
     "preact": "^10.10.6"
   },
   "devDependencies": {
