--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -29,6 +29,7 @@
     "hardhat": "^2.11.0",
     "hardhat-abi-exporter": "^2.10.0",
     "hardhat-deploy": "^0.11.13",
+    "hardhat-ethernal": "^1.1.1",
     "hardhat-gas-reporter": "^1.0.8",
     "node-watch": "^0.7.3",
     "qrcode-terminal": "^0.12.0",
@@ -37,8 +38,8 @@
   },
   "scripts": {
     "chain": "hardhat node --network hardhat --no-deploy",
-    "fork": "hardhat node --no-deploy --network hardhat --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
-    "test": "hardhat test --network hardhat",
+    "fork": "hardhat node --network hardhat --no-deploy --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
+    "test": "hardhat test",
     "compile": "hardhat compile",
     "deploy": "hardhat deploy",
     "postdeploy": "hardhat run scripts/publish.js",
