--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -37,11 +37,11 @@
     "solidity-coverage": "^0.7.21"
   },
   "scripts": {
-    "chain": "hardhat node --network hardhat --no-deploy",
+    "chain": "hardhat node --no-deploy",
     "fork": "hardhat node --network hardhat --no-deploy --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
     "test": "hardhat test",
     "compile": "hardhat compile",
-    "deploy": "hardhat deploy",
+    "deploy": "hardhat deploy --network localhost --export-all ../frontend/src/contracts/hardhat_contracts.json",
     "postdeploy": "hardhat run scripts/publish.js",
     "watch": "node scripts/watch.js",
     "accounts": "hardhat accounts",
