--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "clean-graph-node": "yarn workspace @talents-eth/services clean-graph-node",
     "graph-codegen": "yarn workspace @talents-eth/subgraph graph codegen",
     "graph-build": "yarn workspace @talents-eth/subgraph graph build",
-    "graph-create-local": "yarn workspace @talents-eth/subgraph graph create --node http://localhost:8020/ talents-eth/your-contract",
-    "graph-remove-local": "yarn workspace @talents-eth/subgraph graph remove --node http://localhost:8020/ talents-eth/your-contract",
-    "graph-deploy-local": "yarn workspace @talents-eth/subgraph graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 talents-eth/your-contract",
+    "graph-create-local": "yarn workspace @talents-eth/subgraph graph create --node http://localhost:8020/ talents-eth/candidate",
+    "graph-remove-local": "yarn workspace @talents-eth/subgraph graph remove --node http://localhost:8020/ talents-eth/candidate",
+    "graph-deploy-local": "yarn workspace @talents-eth/subgraph graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 talents-eth/candidate",
     "graph-ship-local": "yarn graph-codegen && yarn graph-build --network localhost && yarn graph-deploy-local",
     "deploy-and-graph": "yarn deploy && yarn graph-ship-local",
     "postinstall": "husky install",
