--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@scaffold-eth/subgraph",
+  "name": "@talents-eth/subgraph",
   "license": "UNLICENSED",
   "version": "1.0.0",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ GITHUB_USERNAME/your-contract",
-    "create-local": "graph create --node http://localhost:8020/ scaffold-eth/your-contract",
-    "remove-local": "graph remove --node http://localhost:8020/ scaffold-eth/your-contract",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 scaffold-eth/your-contract"
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ GITHUB_USERNAME/candidate",
+    "create-local": "graph create --node http://localhost:8020/ talents-eth/candidate",
+    "remove-local": "graph remove --node http://localhost:8020/ talents-eth/candidate",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 talents-eth/candidate"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.29.1",
