--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,9 +35,11 @@
     "react-hook-form": "^7.34.2",
     "react-router-dom": "6",
     "ucan-storage": "^1.3.0",
-    "wagmi": "^0.6.4"
+    "wagmi": "^0.6.4",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.2.2",
     "@preact/preset-vite": "^2.3.0",
     "@rollup/plugin-alias": "^3.1.9",
     "autoprefixer": "^10.4.8",
