--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.34.2",
     "react-router-dom": "6",
     "ucan-storage": "^1.3.0",
+    "vite-plugin-svgr": "^2.2.1",
     "wagmi": "^0.6.4",
     "zustand": "^4.1.1"
   },
