--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@talents-eth/services",
   "version": "1.0.0",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "scripts": {
     "submodule-init": "git submodule init && git submodule update --remote",
     "arbitrum-init": "cd arbitrum && git submodule init && git submodule update && yarn install",
