feat: candidates screen

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -30,11 +30,13 @@
     "daisyui": "^2.24.0",
     "downshift": "^6.1.9",
     "ethers": "^5.7.0",
+    "graphql": "^16.6.0",
     "nft.storage": "^7.0.0",
     "preact": "^10.10.6",
     "react-hook-form": "^7.34.2",
     "react-router-dom": "6",
     "ucan-storage": "^1.3.0",
+    "urql": "^3.0.3",
     "vite-plugin-svgr": "^2.2.1",
     "wagmi": "^0.6.4",
     "zustand": "^4.1.1"
