feat: Initial propose flow

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/typography": "^0.5.7",
     "@vitejs/plugin-react": "^2.0.1",
     "daisyui": "^2.24.0",
+    "date-fns": "^2.29.3",
     "downshift": "^6.1.9",
     "ethers": "^5.7.0",
     "graphql": "^16.6.0",
@@ -45,6 +46,7 @@
     "@hookform/devtools": "^4.2.2",
     "@preact/preset-vite": "^2.3.0",
     "@rollup/plugin-alias": "^3.1.9",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.8",
     "cross-env": "^7.0.3",
     "eslint": "^8.23.0",
