--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -24,9 +24,13 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.18.9",
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@rainbow-me/rainbowkit": "^0.5.1",
     "@tailwindcss/typography": "^0.5.7",
+    "@urql/exchange-refocus": "^1.0.0",
+    "@urql/exchange-request-policy": "^1.0.0",
     "@vitejs/plugin-react": "^2.0.1",
+    "@xmtp/xmtp-js": "^6.1.0",
     "daisyui": "^2.24.0",
     "date-fns": "^2.29.3",
     "downshift": "^6.1.9",
@@ -35,7 +39,7 @@
     "nft.storage": "^7.0.0",
     "preact": "^10.10.6",
     "react-hook-form": "^7.34.2",
-    "react-router-dom": "6",
+    "react-router-dom": "6.4.0",
     "ucan-storage": "^1.3.0",
     "urql": "^3.0.3",
     "vite-plugin-svgr": "^2.2.1",
