--- a/packages/services/graph-node/docker-compose.yml
+++ b/packages/services/graph-node/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       ethereum: 'localhost:http://host.docker.internal:8545'
       GRAPH_LOG: info
       GRAPH_ALLOW_NON_DETERMINISTIC_IPFS: 1
+      GRAPH_ALLOW_NON_DETERMINISTIC_FULLTEXT_SEARCH: 1
     extra_hosts:
       - 'host.docker.internal:host-gateway'
   ipfs:
