feat: added Polygon and Worldcoin support

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "scripts": {
     "chain": "yarn workspace @talents-eth/hardhat chain",
     "fork": "yarn workspace @talents-eth/hardhat fork",
+    "fork-goerli": "yarn workspace @talents-eth/hardhat fork-goerli",
     "node": "yarn workspace @talents-eth/hardhat chain",
     "test": "yarn workspace @talents-eth/hardhat test",
     "compile": "yarn workspace @talents-eth/hardhat compile",
     "deploy": "yarn workspace @talents-eth/hardhat deploy",
+    "deploy-mumbai": "yarn workspace @talents-eth/hardhat deploy-mumbai",
     "verify": "yarn workspace @talents-eth/hardhat verify",
     "watch": "yarn workspace @talents-eth/hardhat watch",
     "accounts": "yarn workspace @talents-eth/hardhat accounts",
@@ -21,14 +23,17 @@
     "flatten": "cd packages/hardhat && npx hardhat flatten",
     "clean": "cd packages/hardhat && npx hardhat clean",
     "run-graph-node": "yarn workspace @talents-eth/services run-graph-node",
+    "run-graph-node-mumbai": "yarn workspace @talents-eth/services run-graph-node-mumbai",
     "remove-graph-node": "yarn workspace @talents-eth/services remove-graph-node",
     "clean-graph-node": "yarn workspace @talents-eth/services clean-graph-node",
+    "graph-create-config": "yarn workspace @talents-eth/subgraph create-config",
     "graph-codegen": "yarn workspace @talents-eth/subgraph graph codegen",
     "graph-build": "yarn workspace @talents-eth/subgraph graph build",
     "graph-create-local": "yarn workspace @talents-eth/subgraph graph create --node http://localhost:8020/ talents-eth/candidate",
     "graph-remove-local": "yarn workspace @talents-eth/subgraph graph remove --node http://localhost:8020/ talents-eth/candidate",
     "graph-deploy-local": "yarn workspace @talents-eth/subgraph graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 talents-eth/candidate",
     "graph-ship-local": "yarn graph-codegen && yarn graph-build --network localhost && yarn graph-deploy-local",
+    "graph-ship-mumbai": "yarn graph-codegen && yarn graph-build --network mumbai && yarn graph-deploy-local",
     "deploy-and-graph": "yarn deploy && yarn graph-ship-local",
     "postinstall": "husky install",
     "prepare": "husky install"
