--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -30,6 +30,7 @@
     "@urql/exchange-refocus": "^1.0.0",
     "@urql/exchange-request-policy": "^1.0.0",
     "@vitejs/plugin-react": "^2.0.1",
+    "@worldcoin/id": "^0.8.0",
     "@xmtp/xmtp-js": "^6.1.0",
     "daisyui": "^2.24.0",
     "date-fns": "^2.29.3",
@@ -38,6 +39,7 @@
     "graphql": "^16.6.0",
     "nft.storage": "^7.0.0",
     "preact": "^10.10.6",
+    "preact-render-to-string": "^5.2.4",
     "react-hook-form": "^7.34.2",
     "react-router-dom": "6.4.0",
     "ucan-storage": "^1.3.0",
