--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -22,9 +22,12 @@
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "@types/mocha": "^9.1.0",
+    "bip39": "^3.0.4",
     "chai": "^4.3.6",
     "chalk": "^4.1.2",
     "dotenv": "^16.0.2",
+    "ethereumjs-util": "^7.1.5",
+    "ethereumjs-wallet": "^1.0.2",
     "ethers": "^5.7.0",
     "hardhat": "^2.11.0",
     "hardhat-abi-exporter": "^2.10.0",
@@ -38,10 +41,12 @@
   },
   "scripts": {
     "chain": "hardhat node --no-deploy",
-    "fork": "hardhat node --network hardhat --no-deploy --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
+    "fork": "hardhat node --no-deploy --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
+    "fork-goerli": "hardhat node --no-deploy --fork https://flashy-magical-star.ethereum-goerli.discover.quiknode.pro/e78091890e47ff6f345968c6279b0a105a90b41a/",
     "test": "hardhat test",
     "compile": "hardhat compile",
     "deploy": "hardhat deploy --network localhost --export-all ../frontend/src/contracts/hardhat_contracts.json",
+    "deploy-mumbai": "hardhat deploy --network mumbai --export-all ../frontend/src/contracts/hardhat_contracts.json",
     "postdeploy": "hardhat run scripts/publish.js",
     "watch": "node scripts/watch.js",
     "accounts": "hardhat accounts",
