--- a/packages/services/package.json
+++ b/packages/services/package.json
@@ -12,6 +12,7 @@
     "run-optimism": "cd optimism/ops && make up",
     "stop-optimism": "cd optimism/ops && make down",
     "run-graph-node": "cd graph-node && docker-compose up",
+    "run-graph-node-mumbai": "cd graph-node && docker-compose -f docker-compose.mumbai.yml up",
     "remove-graph-node": "cd graph-node && docker-compose down",
     "clean-graph-node": "rm -rf graph-node/data/"
   }
