--- a/.github/workflows/deploy_front.yml
+++ b/.github/workflows/deploy_front.yml
@@ -3,9 +3,6 @@ on: [push]
 jobs:
   run:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: packages/frontend
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -14,14 +11,18 @@ jobs:
 
       - name: Install dependencies
         run: yarn
+        with:
+          folder: ./packages/frontend
 
       - name: Build
         run: yarn build
+        with:
+          folder: ./packages/frontend
 
       - name: Deploy
         uses: reggionick/s3-deploy@v3
         with:
-          folder: ./packages/frontend/dist
+          folder: ./packages/frontend/dist/
           bucket: ${{ secrets.S3_BUCKET }}
           bucket-region: ${{ secrets.S3_BUCKET_REGION }}
           dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
