--- a/.github/workflows/deploy_front.yml
+++ b/.github/workflows/deploy_front.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Deploy
         uses: reggionick/s3-deploy@v3
         with:
-          folder: ./packages/frontend/dist/
+          folder: packages/frontend/dist/
           bucket: ${{ secrets.S3_BUCKET }}
           bucket-region: ${{ secrets.S3_BUCKET_REGION }}
           dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
@@ -28,4 +28,3 @@ jobs:
           delete-removed: true
           no-cache: true
           private: true
-          filesToInclude: '.*/*,*/*,**'
