--- a/.github/workflows/deploy_front.yml
+++ b/.github/workflows/deploy_front.yml
@@ -17,14 +17,15 @@ jobs:
         run: yarn build
         working-directory: ./packages/frontend
 
-      - name: Deploy
-        uses: reggionick/s3-deploy@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          folder: packages/frontend/dist/
-          bucket: ${{ secrets.S3_BUCKET }}
-          bucket-region: ${{ secrets.S3_BUCKET_REGION }}
-          dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
-          invalidation: /
-          delete-removed: true
-          no-cache: true
-          private: true
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Deploy dashboard to bucket
+        run: aws s3 sync ./packages/frontend/dist s3://{{ secrets.S3_BUCKET}}
+
+      - name: Invalidate cloudfront
+        run: aws cloudfront create-invalidation --distribution-id {{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
