--- a/.github/workflows/deploy_front.yml
+++ b/.github/workflows/deploy_front.yml
@@ -24,8 +24,8 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.S3_BUCKET_REGION }}
 
-      - name: Deploy dashboard to bucket
-        run: aws s3 sync ./packages/frontend/dist s3://{{ secrets.S3_BUCKET}}
+      - name: Deploy frontend to bucket
+        run: aws s3 sync ./packages/frontend/dist s3://${{ secrets.S3_BUCKET }}
 
       - name: Invalidate cloudfront
         run: aws cloudfront create-invalidation --distribution-id {{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
