--- a/.github/workflows/deploy_front.yml
+++ b/.github/workflows/deploy_front.yml
@@ -28,4 +28,4 @@ jobs:
         run: aws s3 sync ./packages/frontend/dist s3://${{ secrets.S3_BUCKET }}
 
       - name: Invalidate cloudfront
-        run: aws cloudfront create-invalidation --distribution-id {{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
