--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -71,6 +71,7 @@
     "rollup-plugin-visualizer": "^5.8.0",
     "tailwindcss": "^3.1.8",
     "tailwindcss-classnames": "^3.0.6",
-    "vite": "^3.0.9"
+    "vite": "^3.0.9",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
