--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "graph-create-local": "yarn workspace @talents-eth/subgraph graph create --node http://localhost:8020/ talents-eth/candidate",
     "graph-remove-local": "yarn workspace @talents-eth/subgraph graph remove --node http://localhost:8020/ talents-eth/candidate",
     "graph-deploy-local": "yarn workspace @talents-eth/subgraph graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 talents-eth/candidate",
+    "graph-deploy-prod": "yarn workspace @talents-eth/subgraph deploy",
     "graph-ship-local": "yarn graph-codegen && yarn graph-build --network localhost && yarn graph-deploy-local",
     "graph-ship-mumbai": "yarn graph-codegen && yarn graph-build --network mumbai && yarn graph-deploy-local",
     "deploy-and-graph": "yarn deploy && yarn graph-ship-local",
