--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ GITHUB_USERNAME/candidate",
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ --product hosted-service imbaniac/talents-ninja",
     "create-local": "graph create --node http://localhost:8020/ talents-eth/candidate",
     "remove-local": "graph remove --node http://localhost:8020/ talents-eth/candidate",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 talents-eth/candidate",
